tests/errors/asr_verify.f90
program test
   implicit none
   type(foo) :: c
end program
